examples/test/testpolicy16863.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16863
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key9: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value35
          key4: value43
      podSelector:
        matchLabels:
          key37: value6
          key6: value28
          key41: value42
